--- a/notes.html
+++ b/notes.html
@@ -12,7 +12,7 @@
         </div>
         <div class="sidecontent">
             <div class="photo">
-                <img src="images/biz.jpg" width="80%">
+                <img src="biz.jpg" width="80%">
             </div>
             <div class="navbarhead">
                 Contents
