--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         </div>
         <div class="sidecontent">
             <div class="photo">
-                <img src="images/biz.jpg" width="80%">
+                <img src="biz.jpg" width="80%">
             </div>
             <div class="navbarhead">
                 Contents
